[package]
name = "slack"
version = "0.16.0"
authors = ["Benjamin Elder <bentheelder@gmail.com>", "Matt Jones <mthjones@gmail.com>"]
repository = "https://github.com/slack-rs/slack-rs.git"
documentation = "http://slack-rs.github.io/slack-rs/slack/index.html"
description = "slack realtime messaging client: https://api.slack.com/bot-users"
license = "Apache-2.0"

[dependencies]
websocket = { git = "https://github.com/MTRNord/rust-websocket", branch = "openssl-0.9" }
hyper = "0.10.5"
rustc-serialize = "0.3.18"
slack_api = { git = "https://github.com/MTRNord/slack-rs-api", branch = "slack-fix" }
